--- a/config-server/src/main/resources/config/hoadon-service.yaml
+++ b/config-server/src/main/resources/config/hoadon-service.yaml
@@ -1,14 +1,14 @@
 server:
-  port: 8087
+  port: 8090
 
 spring:
   application:
-    name: lichchieu-service
+    name: hoadon-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: password
-    url: jdbc:mysql://localhost:3306/quanlyrapphim_lichchieu
+    url: jdbc:mysql://localhost:3306/quanlyrapphim_hoadon
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,10 +21,10 @@ eureka:
 
 application:
   config:
-    ghes-url: http://localhost:8060/api/ghes
-    khunggios-url: http://localhost:8060/api/khunggios
-    phims-url: http://localhost:8060/api/phims
-    phongchieus-url: http://localhost:8060/phongchieus
+    ves-url: http://localhost:8060/api/ves
+    dichvus-url: http://localhost:8060/api/dichvus
+    thanhviens-url: http://localhost:8060/api/thanhviens
+    
 
 management:
   tracing:
