--- a/config-server/src/main/resources/config/dichvu-service.yaml
+++ b/config-server/src/main/resources/config/dichvu-service.yaml
@@ -5,14 +5,21 @@ spring:
   application:
     name: dichvu-service
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: password
-    url: jdbc:mysql://localhost:3306/quanlyrapphim_dichvu
+    #driver-class-name: com.mysql.cj.jdbc.Driver
+    #username: root
+    #password: password
+    #url: jdbc:mysql://localhost:3306/quanlyrapphim_dichvu
+    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/bzikodlt
+    username: bzikodlt
+    password: JnI5jiCYpFoE-8iO0eky_205dJTs3F5I
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
   data:
     redis:
       host: redis-14439.c252.ap-southeast-1-1.ec2.redns.redis-cloud.com
