Them bao cao pj o pj cu vao readme

--- a/config-server/src/main/resources/config/gateway.yaml
+++ b/config-server/src/main/resources/config/gateway.yaml
@@ -65,6 +65,10 @@ spring:
             uri: lb://email-service
             predicates:
               - Path=/api/emails/**
+          - id: progress-service
+            uri: lb://progress-service
+            predicates:
+              - Path=/api/progress/**
 management:
   tracing:
     sampling:
