--- a/config-server/src/main/resources/config/email-service.yaml
+++ b/config-server/src/main/resources/config/email-service.yaml
@@ -20,6 +20,9 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
+application:
+  config:
+    progress-url: http://localhost:8060/api/progress
 
 management:
   tracing:
