--- a/config-server/src/main/resources/config/khunggio-service.yaml
+++ b/config-server/src/main/resources/config/khunggio-service.yaml
@@ -5,21 +5,21 @@ spring:
   application:
     name: khunggio-service
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    #username: root
-    #password: password
-    #url: jdbc:mysql://localhost:3306/quanlyrapphim_khunggio
-    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/zlsyvhia
-    username: zlsyvhia
-    password: 6EPUskiMT68zTR_lrlHsIRx88zm-bMK8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
+    url: jdbc:mysql://localhost:3306/quanlyrapphim_khunggio
+    #url: jdbc:postgresql://tiny.db.elephantsql.com:5432/zlsyvhia
+    #username: zlsyvhia
+    #password: 6EPUskiMT68zTR_lrlHsIRx88zm-bMK8
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+      #properties:
+      #hibernate:
+      #dialect: org.hibernate.dialect.PostgreSQLDialect
+    #format_sql: true
   data:
     redis:
       host: redis-14439.c252.ap-southeast-1-1.ec2.redns.redis-cloud.com
@@ -30,6 +30,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+application:
+  config:
+    progress-url: http://localhost:8060/api/progress
+
 management:
   tracing:
     sampling:
