--- a/config-server/src/main/resources/config/lichchieu-service.yaml
+++ b/config-server/src/main/resources/config/lichchieu-service.yaml
@@ -5,21 +5,21 @@ spring:
   application:
     name: lichchieu-service
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    #username: root
-    #password: password
-    #url: jdbc:mysql://localhost:3306/quanlyrapphim_lichchieu
-    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/davohfxu
-    username: davohfxu
-    password: 3DiiqiK741_d4TpNDaD0mKu2fvXDM_38
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
+    url: jdbc:mysql://localhost:3306/quanlyrapphim_lichchieu
+    #url: jdbc:postgresql://tiny.db.elephantsql.com:5432/davohfxu
+    #username: davohfxu
+    #password: 3DiiqiK741_d4TpNDaD0mKu2fvXDM_38
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+      #properties:
+      #hibernate:
+      #dialect: org.hibernate.dialect.PostgreSQLDialect
+    #format_sql: true
   data:
     redis:
       host: redis-14439.c252.ap-southeast-1-1.ec2.redns.redis-cloud.com
@@ -38,6 +38,7 @@ application:
     phims-url: http://localhost:8060/api/phims
     phongchieus-url: http://localhost:8060/api/phongchieus
     raps-url: http://localhost:8060/api/raps
+    progress-url: http://localhost:8060/api/progress
 
 management:
   tracing:
