--- a/config-server/src/main/resources/config/phim-service.yaml
+++ b/config-server/src/main/resources/config/phim-service.yaml
@@ -5,26 +5,30 @@ spring:
   application:
     name: phim-service
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    #username: root
-    #password: password
-    #url: jdbc:mysql://localhost:3306/quanlyrapphim_phim
-    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/fthlsckw
-    username: fthlsckw
-    password: n3Va4hISea7gLkd6lGfqDyIFoTVUIA2H
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
+    url: jdbc:mysql://localhost:3306/quanlyrapphim_phim
+    #url: jdbc:postgresql://tiny.db.elephantsql.com:5432/fthlsckw
+    #username: fthlsckw
+    #password: n3Va4hISea7gLkd6lGfqDyIFoTVUIA2H
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+      #properties:
+      #hibernate:
+      #dialect: org.hibernate.dialect.PostgreSQLDialect
+    #format_sql: true
   data:
     redis:
       host: redis-14439.c252.ap-southeast-1-1.ec2.redns.redis-cloud.com
       port: 14439
       password: vE33gQXSafSqeEzpR308UVMM04Z8jr08
+
+application:
+  config:
+    progress-url: http://localhost:8060/api/progress
 
 eureka:
   client:
