--- a/config-server/src/main/resources/config/thanhvien-service.yaml
+++ b/config-server/src/main/resources/config/thanhvien-service.yaml
@@ -5,27 +5,30 @@ spring:
   application:
     name: thanhvien-service
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    #username: root
-    #password: password
-    #url: jdbc:mysql://localhost:3306/quanlyrapphim_thanhvien
-    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/fknmqhce
-    username: fknmqhce
-    password: 0CBbTiggoiwH13d5DOhD8OYeRcGbB0X0
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
+    url: jdbc:mysql://localhost:3306/quanlyrapphim_thanhvien
+    #url: jdbc:postgresql://tiny.db.elephantsql.com:5432/fknmqhce
+    #username: fknmqhce
+    #password: 0CBbTiggoiwH13d5DOhD8OYeRcGbB0X0
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+      #properties:
+      #hibernate:
+      #dialect: org.hibernate.dialect.PostgreSQLDialect
+    #format_sql: true
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
+application:
+  config:
+    progress-url: http://localhost:8060/api/progress
 
 management:
   tracing:
