--- a/config-server/src/main/resources/config/ve-service.yaml
+++ b/config-server/src/main/resources/config/ve-service.yaml
@@ -5,21 +5,21 @@ spring:
   application:
     name: ve-service
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    #username: root
-    #password: password
-    #url: jdbc:mysql://localhost:3306/quanlyrapphim_ve
-    url: jdbc:postgresql://tiny.db.elephantsql.com:5432/ashxxbed
-    username: ashxxbed
-    password: ms6hMLGT9bI1ija1M2Pa5wUv5bNaCD_I
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
+    url: jdbc:mysql://localhost:3306/quanlyrapphim_ve
+    #url: jdbc:postgresql://tiny.db.elephantsql.com:5432/ashxxbed
+    #username: ashxxbed
+    #password: ms6hMLGT9bI1ija1M2Pa5wUv5bNaCD_I
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
+      #properties:
+      #hibernate:
+      #dialect: org.hibernate.dialect.PostgreSQLDialect
+    #format_sql: true
   data:
     redis:
       host: redis-14439.c252.ap-southeast-1-1.ec2.redns.redis-cloud.com
@@ -35,6 +35,7 @@ application:
   config:
     ghes-url: http://localhost:8060/api/ghes
     lichchieus-url: http://localhost:8060/api/lichchieus
+    progress-url: http://localhost:8060/api/progress
 
 management:
   tracing:
